[metadata]
name = wfdemo
version = 0.0.1
description = python for office
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoderWanFeng/publish-pypi
author = CoderWanFeng
author_email = 1957875073@qq.com
license = Apache-2.0 license
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/publish-pypi/issues
    Documentation = https://www.python-office.com/
    Source Code = https://github.com/CoderWanFeng/publish-pypi

[options]
packages = find:
install_requires =
    rich >= 9.13.0
    you-get
    PyOfficeRobot

python_requires = >=3.6
include_package_data = True
zip_safe = False
